name:                haskell-programming
version:             0.1.0.0
synopsis:            Working through Haskell First Principles book exercises
description:         Please see README.md
homepage:            https://github.com/leshow/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           MIT
category:            none
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, WordNumber, Ch15
  build-depends:       base >= 4.7 && < 5
                     , text
                     , time
                     , containers
                     , free
                     , hspec
                     , QuickCheck
                     , checkers
                     , parallel
                     , random
  default-language:    Haskell2010

 -- executable haskell-programming
 --   hs-source-dirs:      app
 --   main-is:             Main.hs
 --   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 --   build-depends:       base
 --                      , haskell-programming
 --   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leshow/haskellbook
