name:                programminghaskell
version:             0.1.0.0
homepage:            https://github.com/leshow/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           MIT
category:            none
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable programminghaskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Ex6_8
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded "-with-rtsopts=-N" -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  extensions:          DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DeriveLift
                     , DerivingStrategies
                     , GeneralizedNewtypeDeriving
                     , OverloadedStrings
                     , ExistentialQuantification
                     , StandaloneDeriving
                     , ScopedTypeVariables
                     , UnicodeSyntax
                     , BinaryLiterals
                     , NumDecimals
                     , ConstraintKinds
                     , RankNTypes
                     , TypeFamilies
                     , TypeInType
                     , DataKinds
                     , KindSignatures
                     , TypeOperators
                     , TypeApplications
                     , GADTs
                     , NamedFieldPuns
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , ConstrainedClassMethods
                     , InstanceSigs
                     , FlexibleInstances
                     , FlexibleContexts
                     , BangPatterns
                     , ViewPatterns
                     , MultiWayIf
                     , EmptyCase
                     , LambdaCase
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
                     , text
                     , aeson
                     , mtl