name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leshow/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           2017 Evan Cameron
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable debug
  ghc-options:         -Wall
  hs-source-dir:       src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network