name:                randomContent
version:             0.1.0.0
synopsis:            Playground
description:         A place for my random tests and algorithms practice.
homepage:            https://github.com/leshow/randomContent#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           MIT
category:            none
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable randomContent
  hs-source-dirs:      src
  other-modules:       BinaryStrings, Concurrently
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , criterion
                     , async
                     , wreq
                     , aeson 
                     , vector
