name:                shawty
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/leshow/shawty#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           MIT
category:            none
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty
    hs-source-dirs:      src
    main-is:             Main.hs
    default-language:    Haskell2010
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , hedis
                       , mtl
                       , network-uri
                       , random
                       , scotty
                       , semigroups
                       , text
                      , transformers
