name:                testing
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/leshow/testing#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           MIT
category:            none
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Addition
  build-depends:       base >= 4.7 && < 5
                     , hspec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leshow/testing
