name:                type-level
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leshow/type-level#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           MIT
category:            none
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -rtsopts
  exposed-modules:     Main, Singleton
  build-depends:       base >= 4.7 && < 5
                       , singletons

